--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "urlsafe-base64": "^1.0.0"
   },
   "devDependencies": {
-    "gulp-babel": "^5.1.0"
+    "gulp-babel": "^5.1.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-sourcemaps": "^1.5.2",
+    "run-sequence": "^1.1.0"
   }
 }
